<resources>
    <string name="app_name">AupApp</string>

    <!-- Idiomas -->
    <string name="castellano">Castellano</string>
    <string name="ingles">Ingles</string>
    <string name="frances">Frances</string>
    <string name="Registro">Registrarse</string>
    <string name="inicioSesion">Iniciar Sesión</string>
    <string name="mantenerSesion">Continuar con la sesión existente</string>
    <string name="cerrarSesion">Cerrar Sesion</string>

    <string name="nohuecos">Todos los campos deben estar rellenados</string>
    <string name="letrasminimo">La contraseña debe de tener al menos 8 caracteres</string>
    <!-- Strings para el registro -->
    <string name="nombre">Nombre</string>
    <string name="introducir_nombre">Introduzca su nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="introducir_primer_apellido">Introduzca su primer apellido</string>
    <string name="segundo_apellido">Segundo apellido</string>
    <string name="introducir_segundo_apellido">Introduzca su segundo apellido</string>
    <string name="password">Contraseña</string>
    <string name="introducir_password">Introduzca su contraseña</string>
    <string name="sign_up">Registrarse</string>
    <string name="sacar_foto_opcional">Sacar foto</string>
    <string name="nocamara">El dispositivo movil no dispone de camara</string>
    <string name="noapp">EL dispositivo no dispone de ninguna aplicación para sacar foto</string>
    <string name="errorregistro">Ha ocurrido un error en el registro</string>

    <!-- Strings para el logeo -->
    <string name="login">Login</string>
    <string name="introducir_login">Introduzca su login</string>
    <string name="sign_in">Logearse</string>
    <string name="nocoincidencias">El usuario o contraseña no son correctos</string>
    <string name="errorlogeo">Ha ocurrido un error en el logeo</string>


    <!-- menu -->

    <string name="perfil_usuario">Perfil de usuario</string>
    <string name="crear_ver_eventos">Crear o ver eventos</string>
    <string name="dia_a_dia">Dia a dia</string>
    <string name="conoce_bizkaia">Conoce Bizkaia</string>

    <!-- perfil de usuario-->

    <string name="nombre_apellidos">Nombre y apellidos: </string>
    <string name="login2">Login: </string>

    <!--Relacionado con eventos-->

    <string name="crearEvento">Crear evento</string>
    <string name="verEventos">Ver eventos</string>

    <!-- Strings para crear evento -->
    <string name="introducir_nombre_evento">Introduzca el nombre del evento</string>
    <string name="fecha_evento">Fecha: </string>
    <string name="introducir_fecha_evento">Introduzca el dia del evento</string>
    <string name="hora_evento">Hora: </string>
    <string name="introducir_hora_evento">Introduzca la hora del evento</string>
    <string name="descripcion_evento">Descripcion: </string>
    <string name="introducir_descripcion_evento">Introduzca la descripcion del evento</string>
    <string name="ubicacion_evento">Ubicacion: </string>
    <string name="introducir_ubicacion_evento">Introduzca la ubicacion del evento</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="evento_correcto">Evento creado correctamente</string>
    <string name="evento_no_correcto">El evento no se ha podido crear</string>

    <!-- Strings para ver evento -->
    <string name="fecha_inicial">Fecha inicial: </string>
    <string name="fecha_final">Fecha final: </string>
    <string name="introducir_fecha_inicial">Introduzca la fecha inicial de los eventos a ver</string>
    <string name="introducir_fecha_final">Introduzca la fecha final de los eventos a ver</string>
    <string name="errorvereventos">Error al ver los eventos</string>
    <string name="nohayeventos">No hay ningun evento entre esas fechas</string>

    <!-- Strings para conoce bizkaia -->
    <string name="lugares_bizkaia">Lugares</string>
    <string name="cultura_bizkaia">Cultura</string>
    <string name="museos">Museos</string>
    <string name="fiesta_bares">Fiesta y bares</string>
    <string name="playas_montañas">Playas y montañas</string>
    <string name="centros_comerciales">Centros comerciales</string>
    <string name="bailes">Bailes</string>
    <string name="comida">Comida</string>

    <!-- Strings para los tests -->
    <string name="preguntarDireccion">Preguntar una direccion</string>
    <string name="saludosdespedidas">Saludos y despedidas</string>
    <string name="iniciarConversacion">Iniciar Conversación</string>
    <string name="Precios">Precios</string>

    <string name="verVideo">Ver video</string>
    <string name="corregir">Corregir</string>
    <string name="siguiente">Siguiente</string>

    <string name="enunciado1">Pregunta 1: Barkatu, ____ liburutegira?</string>
    <string name="respuesta11">Kaixo</string>
    <string name="respuesta12">Nola heldu naiteke</string>
    <string name="respuesta13">Zenbat balio du...?</string>

    <string name="enunciado2">Pregunta 2: Lotara noa, ____</string>
    <string name="respuesta21">Gabon</string>
    <string name="respuesta22">Kaixo</string>
    <string name="respuesta23">Zelan zaude?</string>

    <string name="enunciado3">Pregunta 3: Itzartu berri naiz ____</string>
    <string name="respuesta31">Zelan zaude</string>
    <string name="respuesta32">Egun on</string>
    <string name="respuesta33">Zenbat balio du...?</string>

    <string name="enunciado4">Pregunta 4: Banoa, ___!</string>
    <string name="respuesta41">Agur</string>
    <string name="respuesta42">Kaixo</string>
    <string name="respuesta43">Nola heldu naiteke...?</string>

    <string name="enunciado5">Pregunta 5: Kaixo, ____? Ni ondo.</string>
    <string name="respuesta51">Zenbat balio du...?</string>
    <string name="respuesta52">Zelan zaude?</string>
    <string name="respuesta53">Nola heldu naiteke?</string>

    <string name="enunciado6">Pregunta 6: Pintxo honek,____?</string>
    <string name="respuesta61">Zenbat balio du...?</string>
    <string name="respuesta62">Nola hel naiteke...?</string>
    <string name="respuesta63">Zer moduz?</string>

    <string name="conectando">Conectando...</string>
    <string name="vovlerMenuTests">Volver al menu de los tests</string>

    <string name="resultados">Resultados: </string>

    <string name="ver_ubicacion">Ver ubicacion</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="title_activity_maps">Map</string>
    <string name="hora">Hora: </string>
    <string name="fecha">Fecha: </string>
    <string name="descripcion">Descripcion: </string>

    <string name="volverMenu">Volver al menu</string>


</resources>
