<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.aupapp.LoginActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:columnCount="2">

        <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/introducir_login"
            android:typeface="sans"
            />

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/introducir_password"
            android:inputType="textPassword"
            android:typeface="sans"/>

    </GridLayout>

    <Button
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:layout_marginLeft="@dimen/boton_horizontal_margin"
        android:layout_marginRight="@dimen/boton_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/account"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:typeface="sans"
        android:text="@string/inicioSesion"
        android:onClick="iniciarSesion"/>

</LinearLayout>
