<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.tta.aupapp.CrearEventoActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:columnCount="2">

            <TextView
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:typeface="sans"/>

            <EditText
                android:id="@+id/nombre_evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/introducir_nombre_evento"
                android:typeface="sans"
                />

            <ImageButton
                android:id="@+id/ib_obtener_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_event_white_24dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.505"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_mostrar_fecha_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="date"
                android:hint="@string/formato_fecha"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <ImageButton
                android:id="@+id/ib_obtener_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_access_time_white_24dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
                android:layout_marginEnd="8dp"
                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_hora_picker"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.504"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_mostrar_hora_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="3"
                android:inputType="time"
                android:hint="@string/formato_hora"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent" />


            <TextView
                android:text="@string/ubicacion_evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:typeface="sans"/>

            <EditText
                android:id="@+id/ubicacion_evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/introducir_ubicacion_evento"
                android:typeface="sans"/>

            <TextView
                android:text="@string/descripcion_evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:typeface="sans"/>

            <EditText
                android:id="@+id/descripcion_evento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/introducir_descripcion_evento"
                android:typeface="sans"/>

        </GridLayout>

        <Button
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:drawableTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/camera"
            android:drawablePadding="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:typeface="sans"
            android:text="@string/sacar_foto"
            android:onClick="sacarFoto"/>


        <ImageView
            android:id="@+id/foto_perfil2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:drawableTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/boton_horizontal_margin"
            android:layout_marginRight="@dimen/boton_horizontal_margin"
            android:drawableLeft="@drawable/upload"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center"
            android:typeface="sans"
            android:text="@string/crearEvento"
            android:onClick="crearEvento"/>

        </LinearLayout>

    </ScrollView>





</LinearLayout>
