<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="eus.ehu.tta.aupapp.Presentador.VerEventosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/gridlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:columnCount="2">

                <ImageButton
                    android:id="@+id/ib_obtener_fecha_inicial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_event_white_24dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="0.505"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_mostrar_fecha_picker_inicial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="date"
                    android:hint="@string/formato_fecha"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <ImageButton
                    android:id="@+id/ib_obtener_fecha_final"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_event_white_24dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="0.505"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_mostrar_fecha_picker_final"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="date"
                    android:hint="@string/formato_fecha"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </GridLayout>


            <Button
                android:id="@+id/boton_ver_eventos"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/boton_horizontal_margin"
                android:layout_marginRight="@dimen/boton_horizontal_margin"
                android:drawableLeft="@drawable/calendar"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:typeface="sans"
                android:text="@string/verEventos"
                android:onClick="verEventos"/>

            <Button
                android:id="@+id/boton_ubicacion"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:drawableTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:typeface="sans"
                android:text="@string/ubicacion_evento"
                android:visibility="gone"/>


        </LinearLayout>


    </ScrollView>




</RelativeLayout>
